--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <meta property="og:image" content="KakaoTalk_20221016_202914454" />
         <title>조늘보 - 프로필 링크</title>
         <style>
-            @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+            @import url('https://www.ownglyph.com/trial?fontUID=ae65a155-362d-432c-bf4d-07a3274fe7dd');
 * {
-            font-family: "Pretendard",serif;
+            font-family: 온글잎조늘보체;
 }
             body {background-color:#a8bcd4;}
             .profile {
@@ -70,6 +70,6 @@
                 <h1 class="main">@sloth.jo_zz</h1>
                 <p class="sub">늘보는 지금 별주머니 모으는 중</p>
                 <a target="_blank" href="https://www.instagram.com/sloth.jo_zz">인스타그램</a>
-                <a target="_blank" href="https://class101.net/plus/ko/">Take hobby classes</a></div>
+                <a target="_blank" href="https://www.ownglyph.com/trial?fontUID=ae65a155-362d-432c-bf4d-07a3274fe7dd/">온글잎조늘보체</a></div>
     </body>
 </html>
