--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <meta property="og:image" content="KakaoTalk_20221016_202914454" />
         <title>조늘보 - 프로필 링크</title>
         <style>
-            @import url('https://www.ownglyph.com/trial?fontUID=ae65a155-362d-432c-bf4d-07a3274fe7dd');
+ @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap');
 * {
-            font-family: 온글잎조늘보체;
+            font-family: 'Dongle', sans-serif;
 }
             body {background-color:#a8bcd4;}
             .profile {
