--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <meta property="og:image" content="KakaoTalk_20221016_202914454" />
         <title>조늘보 - 프로필 링크</title>
         <style>
- @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap');
+ @import url('https://cdn.jsdelivr.net/gh/yukyungjo/font/Ownglyph_Joneulbo-Rg/Ownglyph_Joneulbo-Rg.css');
 * {
-            font-family: 'Dongle', sans-serif;
+            font-family: 'Ownglyph_Joneulbo-Rg';
 }
             body {background-color:#a8bcd4;}
             .profile {
