--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:image" content="KakaoTalk_20221016_202914454" />
         <title>조늘보 - 프로필 링크</title>
         <style>
- @import url('https://cdn.jsdelivr.net/gh/yukyungjo/font/Ownglyph_Joneulbo/');
+ @import url('https://cdn.jsdelivr.net/gh/yukyungjo/font@master/Ownglyph_Joneulbo/Ownglyph_Joneulbo.css');
 * {
             font-family: 'Ownglyph_Joneulbo-Rg';
 }
@@ -46,7 +46,7 @@
                border-radius : 10px;
                margin-bottom: 10px;
 
-               font-size: 25px;
+               font-size: 14px;
                font-weight: bold;
                color: #81928c;
 
