--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <style>
  @import url('https://cdn.jsdelivr.net/gh/yukyungjo/font@master/Ownglyph_Joneulbo/Ownglyph_Joneulbo.css');
 * {
-            font-family: 'Ownglyph_Joneulbo-Rg';
+            font-family: 'Ownglyph Joneulbo',regular;
 }
             body {background-color:#a8bcd4;}
             .profile {
