--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <meta property="og:image" content="KakaoTalk_20221016_202914454.jpg" />
         <title>조늘보 - 프로필 링크</title>
         <style>
- @import url('https://cdn.jsdelivr.net/gh/yukyungjo/font@master/Ownglyph_Joneulbo/Ownglyph_Joneulb.css');
+ @import url('https://github.com/yukyungjo/font/blob/main/ownglyphjoneulbo/ownglyphjoneulbo.css');
 * {
-            font-family: 'Ownglyph Joneulbo',regular;
+            font-family: 'ownglyphjoneulbo', regular;
 }  
         body {
             background-color:#FFD0DA;
