--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:image" content="KakaoTalk_20221016_202914454.jpg" />
         <title>조늘보 - 프로필 링크</title>
         <style>
- @import url('https://github.com/yukyungjo/font/blob/main/ownglyphjoneulbo/ownglyphjoneulbo.css');
+ @import url('https://cdn.jsdelivr.net/gh/yukyungjo/myfont@master/ownglyphjoneulbo/ownglyphjoneulbo.css');
 * {
             font-family: 'ownglyphjoneulbo', regular;
 }  
