--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <style>
  @import url('https://cdn.jsdelivr.net/gh/yukyungjo/myfont@master/ownglyphjoneulbo/ownglyphjoneulbo.css');
 * {
-            font-family: 'ownglyphjoneulbo', regular;
+            font-family: 'Ownglyph Joneulbo', Regular;
 }  
         body {
             background-color:#FFD0DA;
