--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:image" content="KakaoTalk_20221016_202914454.jpg" />
         <title>조늘보 - 프로필 링크</title>
         <style>
- @import url('https://cdn.jsdelivr.net/gh/yukyungjo/myfont@master/ownglyphjoneulbo/ownglyphjoneulbo.css');
+ @import url('https://cdn.jsdelivr.net/gh/yukyungjo/myfont@eee705ed0c2012c715fbdfe3a698c7aa2fb624ab/ownglyphjoneulbo/ownglyphjoneulbo.css');
 * {
             font-family: 'Ownglyph Joneulbo', Regular;
 }  
