--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:description" content="늘보와 함께 취미 즐기자" />
         <meta property="og:image" content="KakaoTalk_20221016_202914454.jpg" />
         <title>조늘보 - 프로필 링크</title>
-        <link rel="style" href="./css/ownglyphjoneulbo.css" type="text/css"
+        <link rel="styleaheet" href="./css/ownglyphjoneulbo.css" type="text/css"
         <style>
         body {
             background-color:#FFD0DA;
