--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta property="og:title" content="조늘보 - 프로필 링크" />
         <meta property="og:description" content="늘보와 함께 취미 즐기자" />
         <meta property="og:image" content="KakaoTalk_20221016_202914454.jpg" />
+        <link rel="stylesheet" href="https://github.com/yukyungjo/mypage/blob/main/css/ownglyphjoneulbo.css&display=swap">
         <title>조늘보 - 프로필 링크</title>
-        <link rel="styleaheet" href="./css/ownglyphjoneulbo.css" type="text/css"
         <style>
         body {
             background-color:#FFD0DA;
