--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="wrap">   
                 <div class="profile"></div>
                 <h1 class="main">@sloth.jo_zz</h1>
-                <p class="sub">늘보는 지금 별주머니 모으는 중</p>
+                <p class="sub">늘보랑 별주머니 모으자!</p>
         <a class="bigbutton"target="_blank" href="https://www.ownglyph.com/trial?fontUID=ae65a155-362d-432c-bf4d-07a3274fe7dd/">온글잎 조늘보체 다운받으세요.</a>
         <a class="bigbutton"target="_blank" href="https://class101.net/plus/ko/products/611552d5bfd017000d52af94">박지고의 디지털 수채화 수업 링크</a>
         </div>
