--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
         <meta property="og:title" content="조늘보 - 프로필 링크" />
         <meta property="og:description" content="늘보와 함께 취미 즐기자" />
         <meta property="og:image" content="KakaoTalk_20221016_202914454.jpg" />
-        <link rel="stylesheet" href="./css/ownglyphjoneulbo.css" type="text/css" />							
-        <!--폰트 css-->
         <title>조늘보 - 프로필 링크</title>
         <style>
-        body {
+        @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap');
+             * {
+            font-family: 'Dongle', sans-serif;;
+        }
+
+            body {
             background-color:#FFD0DA;
             background-image: url('https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free_myprofile/%EB%B6%84%ED%99%8D+%EB%A5%B4%ED%83%84%EC%9D%B4/%EB%B6%84%ED%99%8D%EB%B0%98%EC%A7%9D%EC%9D%B4.png');
         }
