--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p class="sub">늘보랑 별주머니 모으자!</p>
         <a class="bigbutton"target="_blank" href="https://www.ownglyph.com/trial?fontUID=ae65a155-362d-432c-bf4d-07a3274fe7dd/">온글잎 조늘보체 다운받으세요.</a>
         <a class="bigbutton"target="_blank" href="https://class101.net/plus/ko/products/611552d5bfd017000d52af94">박지고의 디지털 수채화 수업 링크</a>
-        <a class="bigbutton"target="_blank" href="blog.naver.com/curious_sloth_zz">조늘보의 네이버 블로그</a>
+        <a class="bigbutton"target="_blank" href="https:blog.naver.com/curious_sloth_zz">조늘보의 네이버 블로그</a>
         </div>
 </body>
 </html>
